--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
+
 # -----------------------------------------------------------------------------
 # Theme
 # -----------------------------------------------------------------------------
@@ -224,7 +225,7 @@ exclude:
   - lighthouse_results/
   - package.json
   - package-lock.json
-  - _pages/about.md
+  - _pages/about_einstein.md
   - purgecss.config.js
   - README.md
   - readme_preview/
